--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,19 @@
 {
   "extends": [
     "config:base"
-  ]
+  ],
+  "packageRules": [
+    {
+      "updateTypes": ["minor", "patch", "pin", "digest"],
+      "automerge": true,
+      "automergeType": "branch",
+      "stabilityDays": 3
+    }
+  ],
+  "node": {
+    "supportPolicy": ["lts_latest"]
+  },
+  "prHourlyLimit": 10,
+  "assignees": ["RaddishIoW"],
+  "reviewers": ["RaddishIoW"]
 }
