--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "typings": "./lib/index.d.ts",
   "scripts": {
     "build": "yarn run build:babel && yarn run build:tsc-defs",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build:babel": "babel src/ -d lib --extensions \".ts,.tsx\" --source-maps",
     "build:tsc-defs": "tsc",
     "typesync": "typesync"
@@ -44,18 +44,24 @@
     "@babel/preset-env": "7.13.9",
     "@babel/preset-react": "7.12.13",
     "@babel/preset-typescript": "7.13.0",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
     "@types/babel__core": "7.1.12",
     "@types/babel__plugin-transform-runtime": "7.9.1",
     "@types/babel__preset-env": "7.9.1",
     "@types/eslint": "7.2.6",
+    "@types/jest": "^26.0.20",
     "@types/luxon": "1.26.1",
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.1",
+    "@types/testing-library__jest-dom": "^5.9.5",
+    "@types/testing-library__react": "^10.2.0",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
     "babel-eslint": "10.1.0",
+    "babel-jest": "^26.6.3",
     "documentation": "13.1.1",
-    "eslint": "7.21.0",
+    "eslint": "^7.21.0",
     "eslint-config-standard": "16.0.2",
     "eslint-config-standard-jsx": "10.0.0",
     "eslint-config-standard-react": "11.0.1",
@@ -63,11 +69,15 @@
     "eslint-import-resolver-typescript": "2.4.0",
     "eslint-plugin-compat": "3.9.0",
     "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jest": "^24.2.0",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.3.1",
     "eslint-plugin-radar": "0.2.1",
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.3",
+    "ts-node": "^9.1.1",
     "typescript": "4.2.3",
     "typesync": "0.8.0"
   }
